samples/_failures_safe/1761697548_77e4e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99fd4abe.c: In function ‘main’:
./samples/SAFE/__tmp_99fd4abe.c:141:12: error: missing terminating " character
  141 |     printf("Enter log entries (format
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_99fd4abe.c:141:5: error: expected expression at end of input
  141 |     printf("Enter log entries (format
      |     ^~~~~~
./samples/SAFE/__tmp_99fd4abe.c:141:5: error: expected declaration or statement at end of input
